Backport to java 17